--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,9 @@
-<h1>Hello World</h1>
+ <!DOCTYPE html>
+ <html>
+     <head>
+         <meta charset="utf-8">
+     </head>
+     <body>
+         <script src="app.bundle.js" charset="utf-8"></script>
+     </body>
+ </html>
