--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,8 @@
     <body>
         <div id="app"></div>
         <script src="app.bundle.js" charset="utf-8"></script>
+        
+        <!-- Using a CDN for Bootstrap - consider changing this later -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     </body>
 </html>
