Change font to Open Sans

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
         <div id="app"></div>
         <script src="app.bundle.js" charset="utf-8"></script>
         
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        
         <!-- Using a CDN for Bootstrap - consider changing this later -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+        <link rel="stylesheet" href="index.css">
     </body>
 </html>
